css: fix index page timeline button spacing

--- a/ial_app/static/css/stylesheet.css
+++ b/ial_app/static/css/stylesheet.css
@@ -356,4 +356,6 @@ nav button{
 
 p {
     font-family: 'Abel', sans-serif;
+    letter-spacing: 0.08em;
+    font-size-adjust: 1.2em;
 }
